fix alignment for loading state in auto-suggest-box

--- a/src/components/auto-suggest-box/index.scss
+++ b/src/components/auto-suggest-box/index.scss
@@ -64,10 +64,9 @@
     display: none !important;
   }
 
-
   .loading {
     position: absolute;
-    top: 13px;
+    top: calc(50% - 12px);
     right: 20px;
     font-size: 25px;
   }
